[gd_scene load_steps=12 format=2]

[ext_resource path="res://Elementos/Visuais/HospitalFase1/MeninoFrente.png" type="Texture" id=1]
[ext_resource path="res://Cenas/CaixaDialogo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/ControleDeslizanteVertical.tscn" type="PackedScene" id=3]
[ext_resource path="res://Codigos/TelaHospitalFase1.gd" type="Script" id=4]
[ext_resource path="res://Elementos/Visuais/Icones/Rotulo.svg" type="Texture" id=5]
[ext_resource path="res://Cenas/FonteComicSans.tscn" type="PackedScene" id=6]
[ext_resource path="res://Cenas/AudioAcerto.tscn" type="PackedScene" id=7]
[ext_resource path="res://Cenas/AudioErro.tscn" type="PackedScene" id=8]
[ext_resource path="res://Cenas/PecaMural.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 184, 24 )

[sub_resource type="Animation" id=1]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 22, 0 ), Vector2( -19, 0 ), Vector2( 17, 0 ), Vector2( -23, 0 ), Vector2( 21, 0 ), Vector2( 0, 0 ) ]
}

[node name="TelaHospitalFase1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FundoTermer" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1000.0
margin_top = -540.0
margin_right = 1000.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 1000, 540 )
mouse_filter = 2
color = Color( 0.572549, 0.941176, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fundo" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.572549, 0.941176, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Centro" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cena" type="Node2D" parent="Centro"]

[node name="CorpoHumano" type="Sprite" parent="Centro/Cena"]
scale = Vector2( 2.4, 2.4 )
texture = ExtResource( 1 )

[node name="Parte1" type="Sprite" parent="Centro/Cena"]
position = Vector2( -680, 312 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Linha" type="Line2D" parent="Centro/Cena/Parte1"]
position = Vector2( 168, 112 )
points = PoolVector2Array( 64, -120, 232, -120 )
default_color = Color( 0, 0, 0, 1 )

[node name="Contorno" type="ReferenceRect" parent="Centro/Cena/Parte1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
border_color = Color( 0, 0, 0, 1 )
border_width = 8.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="Centro/Cena/Parte1" instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ParteMao"
align = 1
valign = 1

[node name="Area" type="Area2D" parent="Centro/Cena/Parte1"]

[node name="Contato" type="CollisionShape2D" parent="Centro/Cena/Parte1/Area"]
shape = SubResource( 2 )

[node name="Parte2" type="Sprite" parent="Centro/Cena"]
position = Vector2( -680, 920 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Linha" type="Line2D" parent="Centro/Cena/Parte2"]
position = Vector2( 164.298, 112 )
points = PoolVector2Array( 64, -120, 391.702, -120 )
default_color = Color( 0, 0, 0, 1 )

[node name="Contorno" type="ReferenceRect" parent="Centro/Cena/Parte2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
border_color = Color( 0, 0, 0, 1 )
border_width = 8.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="Centro/Cena/Parte2" instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PartePe"
align = 1
valign = 1

[node name="Area" type="Area2D" parent="Centro/Cena/Parte2"]

[node name="Contato" type="CollisionShape2D" parent="Centro/Cena/Parte2/Area"]
shape = SubResource( 2 )

[node name="Parte3" type="Sprite" parent="Centro/Cena"]
position = Vector2( 570, 351 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Linha" type="Line2D" parent="Centro/Cena/Parte3"]
position = Vector2( -460, 112 )
points = PoolVector2Array( -146, -120, 232, -120 )
default_color = Color( 0, 0, 0, 1 )

[node name="Contorno" type="ReferenceRect" parent="Centro/Cena/Parte3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
border_width = 8.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="Centro/Cena/Parte3" instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PartePenis"
align = 1
valign = 1

[node name="Area" type="Area2D" parent="Centro/Cena/Parte3"]

[node name="Contato" type="CollisionShape2D" parent="Centro/Cena/Parte3/Area"]
shape = SubResource( 2 )

[node name="Parte4" type="Sprite" parent="Centro/Cena"]
position = Vector2( -680, -280 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Linha" type="Line2D" parent="Centro/Cena/Parte4"]
position = Vector2( 168, 112 )
points = PoolVector2Array( 64, -120, 300, -120 )
default_color = Color( 0, 0, 0, 1 )

[node name="Contorno" type="ReferenceRect" parent="Centro/Cena/Parte4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
border_color = Color( 0, 0, 0, 1 )
border_width = 8.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="Centro/Cena/Parte4" instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ParteOmbro"
align = 1
valign = 1

[node name="Area" type="Area2D" parent="Centro/Cena/Parte4"]

[node name="Contato" type="CollisionShape2D" parent="Centro/Cena/Parte4/Area"]
shape = SubResource( 2 )

[node name="Parte5" type="Sprite" parent="Centro/Cena"]
position = Vector2( -680, -910 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Linha" type="Line2D" parent="Centro/Cena/Parte5"]
position = Vector2( 168, 112 )
points = PoolVector2Array( 64, -120, 300, -120 )
default_color = Color( 0, 0, 0, 1 )

[node name="Contorno" type="ReferenceRect" parent="Centro/Cena/Parte5"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
border_color = Color( 0, 0, 0, 1 )
border_width = 8.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="Centro/Cena/Parte5" instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ParteCabeca"
align = 1
valign = 1

[node name="Area" type="Area2D" parent="Centro/Cena/Parte5"]

[node name="Contato" type="CollisionShape2D" parent="Centro/Cena/Parte5/Area"]
shape = SubResource( 2 )

[node name="Parte6" type="Sprite" parent="Centro/Cena"]
position = Vector2( 570, -480 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Linha" type="Line2D" parent="Centro/Cena/Parte6"]
position = Vector2( -460, 112 )
points = PoolVector2Array( -146, -120, 232, -120 )
default_color = Color( 0, 0, 0, 1 )

[node name="Contorno" type="ReferenceRect" parent="Centro/Cena/Parte6"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
border_color = Color( 0, 0, 0, 1 )
border_width = 8.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="Centro/Cena/Parte6" instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ParteBoca"
align = 1
valign = 1

[node name="Area" type="Area2D" parent="Centro/Cena/Parte6"]

[node name="Contato" type="CollisionShape2D" parent="Centro/Cena/Parte6/Area"]
shape = SubResource( 2 )

[node name="Parte7" type="Sprite" parent="Centro/Cena"]
position = Vector2( 570, -660 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Linha" type="Line2D" parent="Centro/Cena/Parte7"]
position = Vector2( -460, 112 )
points = PoolVector2Array( -74, -120, 232, -120 )
default_color = Color( 0, 0, 0, 1 )

[node name="Contorno" type="ReferenceRect" parent="Centro/Cena/Parte7"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
border_color = Color( 0, 0, 0, 1 )
border_width = 8.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="Centro/Cena/Parte7" instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ParteOlho"
align = 1
valign = 1

[node name="Area" type="Area2D" parent="Centro/Cena/Parte7"]

[node name="Contato" type="CollisionShape2D" parent="Centro/Cena/Parte7/Area"]
shape = SubResource( 2 )

[node name="Parte8" type="Sprite" parent="Centro/Cena"]
position = Vector2( 570, -128 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Linha" type="Line2D" parent="Centro/Cena/Parte8"]
position = Vector2( -460, 112 )
points = PoolVector2Array( -74, -120, 232, -120 )
default_color = Color( 0, 0, 0, 1 )

[node name="Contorno" type="ReferenceRect" parent="Centro/Cena/Parte8"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
border_color = Color( 0, 0, 0, 1 )
border_width = 8.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="Centro/Cena/Parte8" instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ParteMamilo"
align = 1
valign = 1

[node name="Area" type="Area2D" parent="Centro/Cena/Parte8"]

[node name="Contato" type="CollisionShape2D" parent="Centro/Cena/Parte8/Area"]
shape = SubResource( 2 )

[node name="Parte9" type="Sprite" parent="Centro/Cena"]
position = Vector2( 570, 123 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Linha" type="Line2D" parent="Centro/Cena/Parte9"]
position = Vector2( -460, 112 )
points = PoolVector2Array( -154, -120, 232, -120 )
default_color = Color( 0, 0, 0, 1 )

[node name="Contorno" type="ReferenceRect" parent="Centro/Cena/Parte9"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
border_color = Color( 0, 0, 0, 1 )
border_width = 8.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="Centro/Cena/Parte9" instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ParteUmbigo"
align = 1
valign = 1

[node name="Area" type="Area2D" parent="Centro/Cena/Parte9"]

[node name="Contato" type="CollisionShape2D" parent="Centro/Cena/Parte9/Area"]
shape = SubResource( 2 )

[node name="Parte10" type="Sprite" parent="Centro/Cena"]
position = Vector2( -680, 468 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Linha" type="Line2D" parent="Centro/Cena/Parte10"]
position = Vector2( 168, 112 )
points = PoolVector2Array( 64, -120, 412, -120 )
default_color = Color( 0, 0, 0, 1 )

[node name="Contorno" type="ReferenceRect" parent="Centro/Cena/Parte10"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
border_color = Color( 0, 0, 0, 1 )
border_width = 8.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="Centro/Cena/Parte10" instance=ExtResource( 6 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -229.5
margin_top = -70.5
margin_right = -229.5
margin_bottom = -70.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ParteCoxa"
align = 1
valign = 1

[node name="Area" type="Area2D" parent="Centro/Cena/Parte10"]

[node name="Contato" type="CollisionShape2D" parent="Centro/Cena/Parte10/Area"]
shape = SubResource( 2 )

[node name="CaixaDialogo" parent="." instance=ExtResource( 2 )]
mouse_filter = 2

[node name="Fundo" parent="CaixaDialogo" index="0"]
mouse_filter = 2

[node name="Margem" parent="CaixaDialogo" index="1"]
mouse_filter = 2

[node name="Elementos" parent="CaixaDialogo/Margem" index="0"]
mouse_filter = 2

[node name="ConteinerVertical" parent="CaixaDialogo/Margem/Elementos/BotaoEsquerda" index="0"]
mouse_filter = 2

[node name="Icone" parent="CaixaDialogo/Margem/Elementos/BotaoEsquerda/ConteinerVertical" index="0"]
mouse_filter = 2

[node name="Campo" parent="CaixaDialogo/Margem/Elementos" index="1"]
margin_right = 1880.0

[node name="Margem" parent="CaixaDialogo/Margem/Elementos/Campo" index="0"]
mouse_filter = 2

[node name="PecaMural" parent="CaixaDialogo/Margem/Elementos/Campo/Margem" index="0" instance=ExtResource( 9 )]
position = Vector2( 740, 150 )

[node name="Texto" parent="CaixaDialogo/Margem/Elementos/Campo/Margem" index="1"]
margin_right = 1681.0
mouse_filter = 2
text = ""

[node name="BotaoDireita" parent="CaixaDialogo/Margem/Elementos" index="2"]
visible = false
ProximaCena = "res://Cenas/TelaPrincipal.tscn"
TrocarCena = true

[node name="AudioAcerto" parent="." instance=ExtResource( 7 )]

[node name="AudioErro" parent="." instance=ExtResource( 8 )]

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Animar" type="AnimationPlayer" parent="Camera"]
anims/Tremer = SubResource( 1 )

[node name="ControleDeslizanteVertical" parent="." instance=ExtResource( 3 )]
self_modulate = Color( 0.27451, 0.788235, 0.988235, 1 )
anchor_left = 0.9
anchor_top = 0.16
anchor_right = 1.0
anchor_bottom = 0.645
margin_right = 0.0
max_value = 1500.0
step = 10.0

[connection signal="input_event" from="CaixaDialogo/Margem/Elementos/Campo/Margem/PecaMural/Toque/Area" to="." method="_on_Area_arrastarParte"]
[connection signal="value_changed" from="ControleDeslizanteVertical" to="." method="_on_ControleDeslizanteVertical_trocar"]

[editable path="CaixaDialogo"]
[editable path="CaixaDialogo/Margem/Elementos/BotaoEsquerda"]
[editable path="CaixaDialogo/Margem/Elementos/Campo/Margem/PecaMural"]
[editable path="CaixaDialogo/Margem/Elementos/BotaoDireita"]
